force-app/main/default/objects/Item_Borrowed__c/Item_Borrowed__c.object-meta.xml
<CustomObject>
    <label>Item Borrowed</label>
    <nameField>
        <displayFormat>IB-{0000}</displayFormat>
        <label>Items Borrowed Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items Borrowed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>