force-app/main/default/objects/Item_Borrowed__c/fields/Borrowed_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_Date__c</fullName>
    <label>Borrowed Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>