force-app/main/default/objects/Item_Borrowed__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <label>Fine Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>