force-app/main/default/objects/Item_Borrowed__c/fields/Item_Borrowed_Field__c.field-meta.xml
<CustomField>
    <fullName>Item_Borrowed_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Borrowed_Field</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Items Borrowed (Item Borrowed)</relationshipLabel>
    <relationshipName>Items_Borrowed1</relationshipName>
    <type>Lookup</type>
</CustomField>