force-app/main/default/objects/Item_Borrowed__c/validationRules/Check_If_Book_Is_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Book_Is_Available</fullName>
    <active>false</active>
    <errorConditionFormula>Item_Borrowed_Field__r.Book_Quantity__c ==0</errorConditionFormula>
    <errorDisplayField>Item_Borrowed_Field__c</errorDisplayField>
    <errorMessage>The book you have selected to issue is currently not available.</errorMessage>
</ValidationRule>