force-app/main/default/objects/Item_Borrowed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Borrowed_Field__c</columns>
    <columns>Borrowed_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>